<resources>
    <string name="app_name">Weather</string>
    <string name="city_hint">City (i.e. Charlotte)</string>
    <string name="country_hint">Country (i.e. US)</string>
    <string name="button_search">Search</string>
    <string name="no_city_text">There re no cities to display. Search the city from the search box and save.</string>
    <string name="saved_label">Saved Cities</string>
    <string name="menu_option">Settings</string>
    <string name="menu_option1">Save City</string>
    <string name="choose_title">Temperature Unit</string>
    <string name="dialog_title">Select Temperature Unit</string>
    <string name="choose_sub">Choose between Celsius and Fahrenheit</string>
    <string name="humidity_label">Humidity:</string>
    <string name="temperature_label">Temperature:</string>
    <string name="pressure_label">Pressure:</string>
    <string name="condition_label">Condition:</string>
    <string name="wind_label">Wind:</string>
    <string-array name="listentries">
        <item>° C</item>
        <item>° F</item>
    </string-array>
    <string-array name="listentryvalues">
        <item>C</item>
        <item>F</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hourly_title">Three Hourly Forecast on</string>
</resources>
