<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anudeesh.hw6.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/container">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCity"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/city_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCountry"
        android:hint="@string/country_hint" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:id="@+id/buttonSearch"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/saved_label"
            android:id="@+id/textViewSaved"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no_city_text"
            android:id="@+id/textViewNoCities"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textColor="#000" />

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/viewSavedCities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
